# ansible-role-tripleo-qdrouterd

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
